스타일 수정

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,3 +5,14 @@
 .prose {
   max-width: 100%;
 }
+
+::selection {
+  color: #ff540f;
+  background: #fff7e0;
+  text-shadow: none;
+}
+
+html.dark::selection {
+  background: red;
+  text-shadow: none;
+}
